--- a/SpringBeanLyfCycle/.classpath
+++ b/SpringBeanLyfCycle/.classpath
@@ -6,7 +6,20 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Spring"/>
-	<classpathentry kind="lib" path="D:/Downloads/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/jstl-api-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/mysql-connector-java-8.0.11.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-aop-5.0.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-beans-5.0.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-context-5.0.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-core-5.0.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-dao-2.0.6.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-expression-5.0.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-jcl-5.0.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-web-5.0.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/Spring Jar/spring-webmvc-5.0.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Framework Jar/hibernate-annotations-jar-files/javax.persistence-api-2.2.jar"/>
+	<classpathentry kind="lib" path="E:/Java Extra/Jar Files/javax.annotation-api-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
